2007-05-28  Aaron Bockover  <abock@gnome.org>

	Patch to provide 16x16 versions of the playlist icons (BGO #398484, 
	Michael Monreal

	* src/Core/Banshee/PlayerInterface.cs:
	* src/Core/Banshee.Base/Sources/AbstractPlaylistSource.cs:
	* src/Core/Banshee.Base/Banshee.SmartPlaylist/SmartPlaylistSource.cs:
	Reference source-smart-playlist-{16,22} and source-playlist-{16,22}

	* data/images/source-smart-playlist-16.png:
	* data/images/source-playlist-16.png: 16x16 versions of the playlist icons

2007-05-25  Gabriel Burt  <gabriel.burt@gmail.com>
	* src/Plugins/Banshee.Plugins.NotificationAreaIcon/NotificationAreaIconPlugin.cs:
	Show the rating item for Smart Playlists too.

2007-05-24  Aaron Bockover  <abock@gnome.org>

	* src/Plugins/Banshee.Plugins.NotificationAreaIcon/NotificationAreaIconPlugin.cs:
	Allow rating the current playing track from the notif. menu (BGO #337157,
	Pepijn van de Geer)

2007-05-24  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Base/Paths.cs: Added ReadXdgUserDir to detect 
	XDG user directories; use XDG_MUSIC_DIR or ~/Music for the default
	library location

2007-05-23  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Base/IO/SystemIO.cs:
	* src/Core/Banshee.Base/IO/Unix.cs:
	* src/Core/Banshee.Base/IO/GnomeVfs.cs: Implemented Close(System.IO.Stream)
	to reflect changes made in TagLib#

2007-05-22  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee/PlayerInterface.cs: Do not start search until at 
	least three characters are available

2007-05-22  Aaron Bockover  <abock@gnome.org>

	NOTE TO ALL: ~/.gnome2/banshee is now ~/.config/banshee

	* src/Core/Banshee.Base/Paths.cs: Changed ApplicationData to 
	~/.config/banshee; added new property, LegacyApplicationData which remains
	~/.gnome2/banshee

	* src/Core/Banshee.Base/Globals.cs: If Paths.ApplicationData does not
	exist, check for Paths.LegacyApplicationData and move the directory
	to Paths.ApplicationData if it does; if not, create Paths.ApplicationData